--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- Fontawesome cdn -->
     <script src="https://kit.fontawesome.com/bbfc4be646.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
         <div class="lg:h-[70px] sm:h-[120px] w-full bg-[#FFFFFF]">
@@ -50,7 +51,7 @@
     </div>
 
 <main class="bg-[#F5FFF6]">
-<div class="p-[30px] flex justify-between gap-3">
+<div class="p-[30px] flex flex-col md:flex-row  justify-between gap-3">
     <div class=" flex flex-col lg:flex-row sm:justify-center lg:justify-between sm:items-center lg:items-start">
     
     <!-- Card area -->
@@ -452,6 +453,6 @@
 </div>
 
 </main>
-
+<script src="index.js"></script>
 </body>
 </html>
